--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
+    "cookieparser": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "@types/node": "^22.10.7",
     "pkgroll": "^2.6.1",
     "tsx": "^4.19.2",
